# booster_deploy

./: .gitattributes  LICENSE  README.md  requirements.txt  setup.sh
booster_deploy/controllers/: base_controller.py  booster_robot_controller.py  controller_cfg.py  mujoco_controller.py
booster_deploy/robots/: booster.py
booster_deploy/utils/: motion_loader.py  remote_control_service.py
booster_robotics_sdk/: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml
booster_robotics_sdk/example/high_level/: b1_7dof_arm_sdk_example.cpp  b1_arm_sdk_example.cpp  b1_loco_example_client.cpp  b1_loco_example_client.py
booster_robotics_sdk/example/low_level/: b1_7dof_arm_low_sdk_example.cpp  b1_low_sdk_example.cpp  battery_state_subscriber.cpp  low_level_hand_data_subscriber.cpp  low_level_hand_data_subscriber.py  low_level_publisher.cpp  low_level_publisher.py  low_level_subscriber.cpp  odometer_example.cpp
booster_robotics_sdk/include/booster/common/dds/: dds_factory_model.hpp
booster_robotics_sdk/include/booster/idl/ai/: AsrChunk.h  Subtitle.h
booster_robotics_sdk/include/booster/idl/b1/: BatteryState.h  HandTouchData.h  HandTouchParam.h  ProneBodyControlStatus.h  RobotReplayTrajID.h  RobotStates.h
booster_robotics_sdk/include/booster/idl/builtin_interfaces/: Time.h
booster_robotics_sdk/include/booster/idl/sensor_msgs/: CameraInfo.h  CompressedImage.h  Image.h  RegionOfInterest.h
booster_robotics_sdk/include/booster/idl/std_msgs/: Header.h
booster_robotics_sdk/include/booster/robot/ai/: api.hpp  client.hpp  const.hpp
booster_robotics_sdk/include/booster/robot/b1/: b1_api_const.hpp  b1_loco_api.hpp  b1_loco_client.hpp
booster_robotics_sdk/include/booster/robot/channel/: channel_factory.hpp  channel_subscriber.hpp
booster_robotics_sdk/include/booster/robot/common/: robot_shared.hpp
booster_robotics_sdk/include/booster/robot/device/light/: light_control_api.hpp  light_control_client.hpp
booster_robotics_sdk/include/booster/robot/rpc/: error.hpp  response.hpp
booster_robotics_sdk/include/booster/robot/vision/: vision_api.hpp  vision_client.hpp
booster_robotics_sdk/include/booster/robot/x5_camera/: x5_camera_api.hpp  x5_camera_api_const.hpp  x5_camera_client.hpp
booster_robotics_sdk/python/: binding.cpp
booster_ros2_interface/: CMakeLists.txt
booster_ros2_interface/include/booster_interface/booster_interface/: message_utils.hpp
booster_ros2_interface/msg/: HandActionStatus.msg  ProneBodyControlStatus.msg  RobotStatesMsg.msg  Subtitle.msg
scripts/: deploy.py
tasks/beyond_mimic/: beyond_mimic.py
tasks/beyond_mimic/models/: k1_fight_001.pt  k1_mj_dance_002_2025-12-03_00-10-28.pt
tasks/beyond_mimic/motions/: k1_fight_final_deploy.npz  k1_mj2_seg1.npz
